Fix menu arrow alignment

--- a/docs/theme/sass/_theme_layout.sass
+++ b/docs/theme/sass/_theme_layout.sass
@@ -913,12 +913,12 @@ body
               content: ""
               display: block
               background: url("../images/arrowblack.svg") no-repeat
-              width: 14px
+              width: 16px
               height: 17px
-              background-size: 14px
+              background-size: 16px
               position: absolute
               right: 29px
-              top: 15px
+              top: 18px
 
             &:hover
               color: $menu-link-medium
@@ -956,12 +956,12 @@ body
             content: ""
             display: block
             background: url("../images/arrowblack.svg") no-repeat
-            width: 14px
+            width: 16px
             height: 17px
-            background-size: 14px
+            background-size: 16px
             position: absolute
             right: 28px
-            top: 9px
+            top: 12px
             z-index: 3
 
           &:hover
